# QuantumRouteOptimizer

./: app.py  app1.py  pyproject.toml
attached_assets/: Pasted-Your-project-on-Optimized-Quantum-Based-Vehicle-Routing-Protocol-involves-integrating-quantum-comp-1743741685627.txt  sampledatatruckrouting1(1).csv
data/: load_truck_data.py  sample_data.py  truck_data.csv
utils/: classical_vrp.py  data_handler.py  quantum_vrp.py  visualization.py
